--- a/src/api/views/hosting.ejs
+++ b/src/api/views/hosting.ejs
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ponjo Image Hosting">
-    <meta property="og:site_name" content="app.ponjo.club/hosting">
-    <meta property="og:description" content="Welcome to the official Ponjo Team image hosting website! Here, you can easily upload your images to be hosted by us externally and share them with ease. You will no longer have to worry about finding lost images; they will all remain safe and secure in our databases.">
+    <meta property="og:site_name" content="Ponjo Studios">
+    <meta property="og:description" content="Welcome to the official Ponjo Studios image hosting website! Here, you can easily upload your images to be hosted by us externally and share them with ease. You will no longer have to worry about finding lost images; they will all remain safe and secure in our databases.">
     <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png">
-    <meta property="author" content="Ponjo Studios">
     <meta name="theme-color" content="#4295f4">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png" type="img/png">
 </head>
 <body>
@@ -83,10 +82,9 @@
                                 </center>
                                 <center>
                                     <label>
-                                        All images are stored securely within our databases. Developed with availability
-                                        as a top priority, we provide reliable hosting, so you can upload as many images
-                                        as you want, when you want. We're always there for you, willing to attend to any
-                                        issues you may have.
+                                        Ponjo Image Hosting was designed with uptime and support as a top priority.
+                                        We're always here to attend to any issues you may have. If you'd like to report
+                                        a bug or contact us, do so <a href="https://ponjo.club/discord">here</a>.
                                     </label>
                                 </center>
                                 <center>
@@ -95,7 +93,7 @@
                                 <center>
                                     <label>
                                         Before using our service, you agree to abide by our Terms & consent to our
-                                        Privacy Policy, which can be found <a href="https://api.ponjo.club/terms">here</a>.
+                                        Privacy Policy, which can be found <a href="https://app.ponjo.club/terms">here</a>.
                                     </label>
                                 </center>
                             </div>
@@ -113,7 +111,7 @@
                 <div class="footer-link padding-top--24">
                     <span><a href="https://app.ponjo.club/privacy">Privacy Policy</a> • <a href="https://app.ponjo.club/terms">Terms of Service</a></span>
                     <div class="listing padding-top--12 padding-bottom--12 flex-flex center-center">
-                        <span><a href="#">© 2021 Ponjo Team, Ben Petrillo. All rights reserved.</a></span>
+                        <span><a href="#">© 2021 Ponjo Studios, Ben Petrillo. All rights reserved.</a></span>
                     </div>
                 </div>
             </div>
