--- a/src/api/views/image-hosting.ejs
+++ b/src/api/views/image-hosting.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <title>Ponjo API | Endpoints</title>
+    <title>Ponjo Image Hosting</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Ponjo API | Endpoints">
-    <meta property="og:site_name" content="app.ponjo.club/endpoints">
-    <meta property="og:description" content="Here you can find all endpoints and request routes for the Ponjo API. With over 35 endpoints, you'll be able to make the most out of your development project.">
-    <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png">
+    <meta property="og:title" content="Ponjo Image Hosting">
+    <meta property="og:site_name" content="Ponjo Studios">
+    <meta property="og:description" content="Learn more about Ponjo's image hosting service.">
+    <meta property="og:image:url" content="https://app.ponjo.club/images/Logo.png">
+    <meta property="og:image:secure_url" content="https://app.ponjo.club/images/Logo.png">
     <meta name="theme-color" content="#ad4fe8">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    <link rel="icon" href="images/Crescent-Logo.png" type="img/svg">
+    <link rel="icon" href="/images/Logo.png" type="img/svg">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -86,18 +86,18 @@
             <div class="site-footer-inner">
                 <div class="brand footer-brand">
                     <a href="">
-                        <img src="images/Crescent-Logo.png" alt="" width="40" height="40">
+                        <img src="/images/Logo.png" alt="" width="40" height="40">
                     </a>
                 </div>
                 <ul class="footer-links list-reset">
                     <li>
-                        <a href="https://crescentmoon.app/getting-started">Guide</a>
+                        <a href="https://docs.ponjo.club/ponjo-api/guide">Guide</a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/endpoints">Documentation</a>
+                        <a href="https://docs.ponjo.club">Documentation</a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/faq">FAQs</a>
+                        <a href="https://app.ponjo.club/endpoints">Endpoints</a>
                     </li>
                     <li>
                         <a href="https://ponjo.club/discord">Support</a>
@@ -111,25 +111,27 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/PonjoDev">
+                        <a href="https://twitter.com/Eerie6560">
                             <span class="screen-reader-text">Twitter</span>
                             <i class="fab fa-twitter" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://crescentmoon.app/endpoints">
+                        <a href="https://docs.ponjo.club">
                             <span class="screen-reader-text">Documentation</span>
                             <i class="fas fa-bookmark" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:eerie@ponjo.club">
+                        <a href="mailto:benpetrillo@ponjo.club">
                             <span class="screen-reader-text">Contact</span>
                             <i class="fas fa-paper-plane" style="color: #0270D7; font-size: 18px"></i>
                         </a>
                     </li>
                 </ul>
-                <div class="footer-copyright">&copy; 2021 Ponjo Studios. All rights reserved.</div>
+                <div class="footer-copyright">
+                    &copy; 2021 Ponjo Studios. All rights reserved.
+                </div>
             </div>
         </div>
     </footer>
