--- a/src/api/views/image.ejs
+++ b/src/api/views/image.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>Ponjo Hosting</title>
-    <link rel="icon" type="image/png" href="https://app.ponjo.club/images/Crescent-Logo.png">
+    <link rel="icon" type="image/png" href="https://app.ponjo.club/images/Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ponjo | <%= imageId %>.png">
     <meta property="og:site_name" content="Ponjo Studios">
@@ -12,6 +12,6 @@
     <meta name="twitter:card" content="summary_large_image">
 </head>
 <body style="height: 100%; text-align: center; margin: 0; background: #222222;">
-    <img id="imageTag" style="user-select: none; -webkit-user-select: none; cursor: zoom-in;" src="<%= imagePath %>" alt="https://app.ponjo.club/images/Crescent-Logo.png">
+    <img id="imageTag" style="user-select: none; -webkit-user-select: none; cursor: zoom-in;" src="<%= imagePath %>" alt="https://app.ponjo.club/images/Logo.png">
 </body>
 </html>
