minor path refactors

--- a/src/api/views/index.ejs
+++ b/src/api/views/index.ejs
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ad4fe8">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    <link rel="icon" href="https://app.ponjo.club/images/Logo.png" type="img/png">
+    <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/png">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -164,7 +164,7 @@
                         All images are stored securely within our databases. Developed with availability and security as
                         top priorities, we provide reliable hosting, so you can upload as many images as you want, when
                         you want. We are always working on new ways to improve our hosting service to provide the best
-                        user experience possible. You can learn more <a class="ponjo-url" href="https://ponjo.club/hosting">here</a>.
+                        user experience possible. You can learn more <a class="ponjo-url" href="https://app.ponjo.club/hosting">here</a>.
                     </p>
                 </div>
                 <div class="container section-inner">
