--- a/src/api/views/image-hosting.ejs
+++ b/src/api/views/image-hosting.ejs
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ad4fe8">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    <link rel="icon" href="/images/Logo.png" type="img/svg">
+    <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/png">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -69,7 +69,7 @@
                                     <h4 class="feature-title mt-24"><%= image.imageId %></h4>
                                     <p class="text-sm mb-0">
                                         UUID: <%= image.imageId %> <br>
-                                        Raw: <a class="ponjo-url" href="https://app.ponjo.club/uploads<%= image.filePath %>"><%= image.filePath %></a> <br>
+                                        Raw: <a class="ponjo-url" href="https://app.ponjo.club<%= image.filePath %>"><%= image.filePath %></a> <br>
                                         Embed: <a class="ponjo-url" href="https://app.ponjo.club/uploads/<%= image.imageId %>"><%= image.imageId %></a> <br>
                                         Uploaded: <%= image.createdAt.toLocaleDateString() %>
                                     </p>
