--- a/src/api/views/image.ejs
+++ b/src/api/views/image.ejs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ponjo | <%= imageId %>.png">
     <meta property="og:site_name" content="Ponjo Studios">
-    <meta property="og:description" content="Uploaded <% new Date().toLocaleDateString()%>.">
+    <meta property="og:description" content="Developed by Eerie#6560.">
     <meta name="byl" content="Developed by Eerie#6560.">
     <meta name="theme-color" content="#4295f4">
     <meta name="twitter:image" content="<%= imagePath %>">
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/png">
 </head>
 <body style="height: 100%; text-align: center; margin: 0; background: #222222;">
     <img id="imageTag" style="user-select: none; -webkit-user-select: none; cursor: zoom-in;" src="<%= imagePath %>" alt="https://app.ponjo.club/images/Logo.png">
