--- a/src/api/views/endpoints.ejs
+++ b/src/api/views/endpoints.ejs
@@ -11,6 +11,7 @@
     <meta property="og:image:url" content="https://app.ponjo.club/images/Logo.png">
     <meta property="og:image:secure_url" content="https://app.ponjo.club/images/Logo.png">
     <meta name="theme-color" content="#ad4fe8">
+    <meta name="keywords" content="ben petrillo, petrillo, ponjo api, ponjo studios, elixir music bot, ben petrillo portfolio, ben petrillo github">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/pmg">
@@ -114,15 +115,6 @@
                                                 <span class="badge badge-get">GET REQUEST</span><br>
                                                 <code class="ponjo-code-bold">/v1/health</code><br>
                                                 <code class="ponjo-code">Perform an API health/response time check.</code>
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="feature text-center is-revealing">
-                                        <div class="feature-inner">
-                                            <p class="mt-0">
-                                                <span class="badge badge-get">GET REQUEST</span><br>
-                                                <code class="ponjo-code-bold">/v1/prime</code><br>
-                                                <code class="ponjo-code">Determine whether a number is prime or not.</code>
                                             </p>
                                         </div>
                                     </div>
@@ -319,6 +311,81 @@
                                             <span class="badge badge-get">GET REQUEST</span><br>
                                             <code class="crescent-code-bold">/v1/query/ark</code><br>
                                             <code class="crescent-code">Query an ARK: Survival Evolved server with options.</code>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <section class="section-paragraph text-center cta">
+            <div class="container">
+                <div class="section-inner text-center">
+                    <h4 class="mt-0 text-center" style="font-size: 30px;">Elixir Music Endpoint</h4>
+                    <section class="features section">
+                        <div class="container">
+                            <div class="features-inner section-inner has-bottom-divider">
+                                <div class="features-wrap">
+                                    <div class="feature text-center is-revealing">
+                                        <div class="feature-inner">
+                                            <p class="mt-0">
+                                                <span class="badge badge-get">GET REQUEST</span><br>
+                                                <code class="crescent-code-bold">/v1/elixir/queue</code><br>
+                                                <code class="crescent-code">Get the music queue for a guild.</code>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <div class="feature-inner">
+                                            <p class="mt-0">
+                                                <span class="badge badge-get">GET REQUEST</span><br>
+                                                <code class="crescent-code-bold">/v1/elixir/nowplaying</code><br>
+                                                <code class="crescent-code">Get information about the track currently playing in a guild.</code>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-post">POST REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/pause</code><br>
+                                            <code class="crescent-code">Pause the music player in a guild.</code>
+                                        </p>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-post">POST REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/resume</code><br>
+                                            <code class="crescent-code">Resume the music player in a guild.</code>
+                                        </p>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-post">POST REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/shuffle</code><br>
+                                            <code class="crescent-code">Shuffle the music queue in a guild.</code>
+                                        </p>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-post">POST REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/play</code><br>
+                                            <code class="crescent-code">Play a track or playlist in a guild.</code>
+                                        </p>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-get">GET REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/playlist/fetch</code><br>
+                                            <code class="crescent-code">Fetch a custom playlist by ID.</code>
+                                        </p>
+                                    </div>
+                                    <div class="feature text-center is-revealing">
+                                        <p class="mt-0">
+                                            <span class="badge badge-post">POST REQUEST</span><br>
+                                            <code class="crescent-code-bold">/v1/elixir/playlist/queue</code><br>
+                                            <code class="crescent-code">Queue a custom playlist by ID.</code>
                                         </p>
                                     </div>
                                 </div>
