--- a/src/api/views/index.ejs
+++ b/src/api/views/index.ejs
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ponjo API">
     <meta property="og:site_name" content="Ponjo Studios">
-    <meta property="og:description" content="The official homepage of the Ponjo API, serving all of your developer utility needs. With over 55 endpoints, you'll easily be able to fuse your application with various powerful resources.">
+    <meta property="og:description" content="The official homepage of the Ponjo API, serving all of your developer utility needs. With over 60 endpoints, you'll easily be able to fuse your application with various powerful resources.">
     <meta property="og:image:url" content="https://app.ponjo.club/images/Logo.png">
     <meta property="og:image:secure_url" content="https://app.ponjo.club/images/Logo.png">
     <meta name="theme-color" content="#ad4fe8">
+    <meta name="keywords" content="ben petrillo, petrillo, ponjo api, ponjo studios, elixir music bot, ben petrillo portfolio, ben petrillo github">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/png">
