--- a/src/api/views/hosting.ejs
+++ b/src/api/views/hosting.ejs
@@ -10,6 +10,7 @@
     <meta property="og:image:url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png">
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png">
     <meta name="theme-color" content="#4295f4">
+    <meta name="keywords" content="ben petrillo, petrillo, ponjo api, ponjo studios, elixir music bot, ben petrillo portfolio, ben petrillo github">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Ponjo-Hosting.png" type="img/png">
 </head>
