--- a/src/api/views/image.ejs
+++ b/src/api/views/image.ejs
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#4295f4">
     <meta name="twitter:image" content="<%= imagePath %>">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="keywords" content="ben petrillo, petrillo, ponjo api, ponjo studios, elixir music bot, ben petrillo portfolio, ben petrillo github">
     <link rel="icon" href="https://raw.githubusercontent.com/Eerie6560/Archives/main/images/icons/Crescent-Logo.png" type="img/png">
 </head>
 <body style="height: 100%; text-align: center; margin: 0; background: #222222;">
