more work on rewriting image hosting

--- a/src/api/views/endpoints.ejs
+++ b/src/api/views/endpoints.ejs
@@ -27,7 +27,7 @@
                 <p class="text-sm mb-0 text-center field">
                     Welcome to the endpoint page of the Ponjo API! Here, you can view all available endpoints,
                     and how to access them. With over 55 endpoints, it's almost certain
-                    you'll be able to find this API of great use. Responses are easily-parsable in a straightforward
+                    you'll be able to find this API of great use. APIResponses are easily-parsable in a straightforward
                     JSON format to allow for seamless integration into your application or project.
                 </p>
                 <p class="text-sm mb-0 mt-16 text-center">
