--- a/src/api/views/hosting.ejs
+++ b/src/api/views/hosting.ejs
@@ -53,7 +53,7 @@
             <div class="formbg-outer">
                 <div class="formbg">
                     <div class="formbg-inner padding-horizontal--48">
-                        <form id="stripe-login" action="/images/post" method="post" enctype="multipart/form-data">
+                        <form id="stripe-login" action="/uploads/post" method="post" enctype="multipart/form-data">
                             <div class="field padding-bottom--24">
                                 <center>
                                     <h5 style="padding-bottom: 8px;">Premium Quality</h5>
@@ -99,7 +99,7 @@
                                 </center>
                             </div>
                             <div class="field">
-                                <input id="file-upload" type="file" name="avatar" onchange="extensionCheck(event)">
+                                <input id="file-upload" type="file" name="upload" onchange="extensionCheck(event)">
                             </div>
                             <div class="field padding-top--24">
                                 <div class="field padding-bottom--24">
