removed unnecessary info

--- a/src/api/views/successfulUpload.ejs
+++ b/src/api/views/successfulUpload.ejs
@@ -41,7 +41,11 @@
                 </div>
             </section>
             <section class="features section">
-                <img src="https://app.ponjo.club/<%= imageId %>.png" alt="">
+                <div class="container">
+                    <div class="align-center text-center">
+                        <img src="https://app.ponjo.club/<%= imageId %>.png" alt="">
+                    </div>
+                </div>
             </section>
         </section>
     </main>
