added title detailing

--- a/src/api/views/hosting.ejs
+++ b/src/api/views/hosting.ejs
@@ -56,7 +56,7 @@
                         <form id="stripe-login" action="/uploads/post" method="post" enctype="multipart/form-data">
                             <div class="field padding-bottom--24">
                                 <center>
-                                    <h5 style="padding-bottom: 8px;">Premium Quality</h5>
+                                    <h5 style="padding-bottom: 8px;">Quality & Security</h5>
                                 </center>
                                 <center>
                                     <label>
@@ -66,10 +66,7 @@
                                     </label>
                                 </center>
                                 <center>
-                                    <h5 style="padding-bottom: 8px;">Security & Uptime</h5>
-                                </center>
-                                <center>
-                                    <h5 style="padding-bottom: 8px;">Quality Support</h5>
+                                    <h5 style="padding-bottom: 8px;">Support</h5>
                                 </center>
                                 <center>
                                     <label>
