deprecated image hosting

--- a/src/api/views/404.ejs
+++ b/src/api/views/404.ejs
@@ -29,7 +29,7 @@
                 </p>
                 <p class="text-sm mb-0 mt-16 text-center">
                     <a class="ponjo-url" href="https://app.ponjo.club">Go back</a> <br>
-                    <a class="ponjo-url" href="https://app.ponjo.club/hosting">Ponjo Image Hosting</a> <br>
+                    <a class="ponjo-url" href="https://cdn.ponjo.club">Ponjo CDN</a> <br>
                     <a class="ponjo-url" href="https://docs.ponjo.club">Documentation</a>
                 </p>
             </div>
