--- a/src/api/views/index.ejs
+++ b/src/api/views/index.ejs
@@ -129,7 +129,7 @@
                         <strong><%= cleanFormat(data.requests.posts) %></strong> ─ POST requests. <br>
                         <strong><%= cleanFormat(keys.length) %></strong> ─ API keys generated. <br>
                         <strong>57</strong> ─ total endpoints. <br>
-                        <strong><%= new Date("August 24, 2021 18:30:00").toLocaleString() %></strong> ─ first API deployment.
+                        <strong><%= new Date("August 24, 2021 18:30:00").toLocaleString() %></strong> ─ initial release.
                     </p>
                 </div>
             </section>
@@ -142,9 +142,10 @@
                         and I'm the sole frontend & backend developer of the Ponjo API and its affiliated services.
                         I'm currently a senior in high school with plans to double-major in
                         <a class="ponjo-url" href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a>
-                        and <a class="ponjo-url" href="https://en.wikipedia.org/wiki/Mathematics">Mathematics</a> in
-                        college. If you're interested in viewing some of my other projects, check out
-                        <a class="ponjo-url" href="https://github.com/Eerie6560">my GitHub</a>.
+                        and <a class="ponjo-url" href="https://en.wikipedia.org/wiki/Mathematics">Mathematics</a> at
+                        Northeastern University. If you're interested in viewing some of my other projects, check out
+                        <a class="ponjo-url" href="https://github.com/Eerie6560">my GitHub</a> or my
+                        <a class="ponjo-url" href="https://benpetrillo.dev">portfolio</a>.
                     </p>
                     <p class="text-sm mb-0 mt-16 text-center">
                         My goal as a developer has always been threefold: to learn new things, to have fun while doing it,
@@ -156,16 +157,15 @@
                 <div class="container section-inner">
                     <h4 class="mt-0 text-center" style="font-size: 30px;">Ponjo Image Hosting</h4><br>
                     <p class="text-sm mb-0 mt-0 text-center">
-                        Ponjo Image Hosting is a free image hosting service provided by Ponjo Studios.
-                        A free, easy-to-use image hosting service developed by Ponjo Studios. It supports a variety of
-                        applications such as Discord, WhatsApp, Twitter, and more. Easily store your images without a
-                        hassle.
+                        Ponjo CDN is a free image hosting service provided by Ponjo Studios.
+                        It supports a variety of applications such as Discord, WhatsApp, Twitter, and more.
+                        Easily store your images without a hassle.
                     </p>
                     <p class="text-sm mb-0 mt-16 text-center">
                         All images are stored securely within our databases. Developed with availability and security as
                         top priorities, we provide reliable hosting, so you can upload as many images as you want, when
                         you want. We are always working on new ways to improve our hosting service to provide the best
-                        user experience possible. You can learn more <a class="ponjo-url" href="https://app.ponjo.club/hosting">here</a>.
+                        user experience possible. You can learn more <a class="ponjo-url" href="https://cdn.ponjo.club">here</a>.
                     </p>
                 </div>
                 <div class="container section-inner">
